--- a/index.html
+++ b/index.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="ro">
 <head>
-    <title>Portofoliul Meu</title>
     <meta charset="UTF-8">
-    <style>
-        body {
-            font-family: Arial;
-            text-align: center;
-            background: #111;
-            color: white;
-        }
-        img {
-            width: 300px;
-            margin: 20px;
-            border-radius: 10px;
-        }
-        a {
-            color: #00ccff;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portofoliul Meu</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>Portofoliul Meu Foto & Video</h1>
-    <p>Bine ai venit!</p>
+<header>
+    <h1>Portofoliul Meu</h1>
+    <p>Cinematic • Modern • Minimalist</p>
+</header>
 
-    <h2>Fotografie</h2>
-    <img src="https://via.placeholder.com/300">
+<section id="foto">
+    <h2>Foto</h2>
+    <div class="grid">
+        <img src="foto1.jpg" alt="Fotografie 1">
+        <img src="foto2.jpg" alt="Fotografie 2">
+        <img src="foto3.jpg" alt="Fotografie 3">
+        <img src="foto4.jpg" alt="Fotografie 4">
+    </div>
+</section>
 
+<section id="video">
     <h2>Video</h2>
-    <iframe width="560" height="315"
-        src="https://www.youtube.com/embed/dQw4w9WgXcQ"
-        frameborder="0"
-        allowfullscreen>
-    </iframe>
+    <div class="video-wrapper">
+        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+        </iframe>
+    </div>
+</section>
 
-    <h3>Contact</h3>
-    <p>Email: emailulmeu@gmail.com</p>
+<footer>
+    <p>Contact: <a href="mailto:emailulmeu@example.com">emailulmeu@example.com</a></p>
+</footer>
 
 </body>
 </html>
