--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>Foto</h2>
     <div class="grid">
         <img src="foto1.jpg" alt="Fotografie 1">
-        <img src="foto2.jpg" alt="Fotografie 2">
+        <img src="DSCF3250.jpg" alt="Fotografie 2">
         <img src="foto3.jpg" alt="Fotografie 3">
         <img src="foto4.jpg" alt="Fotografie 4">
     </div>
