--- a/index.html
+++ b/index.html
@@ -1,41 +1,39 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofoliul Meu</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>Numele Tău</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header>
-    <h1>Portofoliul Meu</h1>
-    <p>Cinematic • Modern • Minimalist</p>
-</header>
-
-<section id="foto">
-    <h2>Foto</h2>
-    <div class="grid">
-        <img src="foto1.jpg" alt="Fotografie 1">
-        <img src="DSCF3250.jpg" alt="Fotografie 2">
-        <img src="foto3.jpg" alt="Fotografie 3">
-        <img src="foto4.jpg" alt="Fotografie 4">
+<section class="hero">
+    <div class="hero-content">
+        <h1>Numele Tău</h1>
+        <p>Visual Storytelling</p>
     </div>
 </section>
 
-<section id="video">
-    <h2>Video</h2>
-    <div class="video-wrapper">
-        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-        </iframe>
-    </div>
+<section class="gallery">
+    <img src="images/foto1.jpg">
+    <img src="images/foto2.jpg">
+    <img src="images/foto3.jpg">
+    <img src="images/foto4.jpg">
 </section>
 
-<footer>
-    <p>Contact: <a href="mailto:emailulmeu@example.com">emailulmeu@example.com</a></p>
-</footer>
+<section class="video">
+    <iframe src="https://www.youtube.com/embed/VIDEO_ID"
+    frameborder="0" allowfullscreen></iframe>
+</section>
+
+<section class="contact">
+    <p>emailulmeu@gmail.com</p>
+</section>
 
 </body>
 </html>
